--- a/public/landing/css/devices.css
+++ b/public/landing/css/devices.css
@@ -30,6 +30,22 @@
     /*width+left+right=100%*/
     top: 7%;
 }
+.centerdevices .browserwrapper .popup-play {
+    margin: 0 auto;
+    position: absolute;
+    display: block;
+    width: 39%;    
+    left: 30%;
+    right: 30%;
+    /*width+left+right=100%*/
+    top: 7%;
+    opacity:0;
+    transition:opacity 0.5s;
+}
+.centerdevices .browserwrapper:hover .popup-play{
+    opacity: 0.3;
+}
+
 
 .centerdevices .browserwrapper .browser {
     border-radius: 6px 6px 0 0;
@@ -97,6 +113,7 @@
     z-index: 2;
     padding: 30px 0 0 0;
     margin: auto;
+    cursor: pointer;
 }
 .centerdevices .browserwrapper .browser:before {
     content: "\25CF \25CF \25CF";
